--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  -webkit-tap-highlight-color: transparent;
+    user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+  
 }
 .container {
   width: 800px;
